--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     // console.log("Điểm thi cao thứ 3 là:", max3);
 
     function diemcaothu3(arr) {
-        let max1 = -Infinity;
-        let max2 = -Infinity;
-        let max3 = -Infinity;
+        let max1 = 0;
+        let max2 = 0;
+        let max3 = 0;
 
         for (let i = 0; i < arr.length; i++) {
             if (arr[i] > max1) {
