--- a/index2.html
+++ b/index2.html
@@ -11,19 +11,18 @@
     //     Nếu index không hợp lệ, trả về mảng ban đầu.
     // (không dùng hàm có sẵn để xóa mảng)
     function tryRemoveFromArray(number, index) {
-        let star = [];//1,2,
+        let arr = [];//1,2,
         if (index < 0 || index > number.length) {
-            return number
+            return number;
         }
         for (let i = 0; i < number.length; i++) {//0,1,2,3
             if (i !== index) {
-                star [star.length] = number[i]//0,1,3
+                arr[arr.length] = number[i]//0,1,3
             }
         }
-        return star;
+        return arr;
     }
-
-    console.log(tryRemoveFromArray([1, 2, 3, 4, 5, 6, 7, 8], 2))
+    console.log(tryRemoveFromArray([1, 2, 3, 4, 5, 6, 7, 8], 9))
 
 </script>
 </body>
