--- a/index4.html
+++ b/index4.html
@@ -20,50 +20,46 @@
     // - Hiển thị hình chữ nhật trên một canvas bằng cách sử dụng phương thức render
 
 
-    // hình chữ nhật , hình vuông
     // class Rectangle {
     //     constructor(x, y, width, height, color) {
-    //         this.x = x
-    //         this.y = y
-    //         this.width = width
-    //         this.height = height
-    //         this.color = color
+    //         this.x = x;
+    //         this.y = y;
+    //         this.width = width;
+    //         this.height = height;
+    //         this.color = color;
     //     }
     //
     //     render(canvas) {
-    //         let ctx = canvas.getContext("2d")
+    //         let ctx = canvas.getContext("2d");
     //         ctx.fillStyle = this.color;
     //         ctx.fillRect(this.x, this.y, this.width, this.height);
     //     }
-    //
     // }
     //
-    // let tangle = new Rectangle(50, 30, 200, 100, "#000000")
-    // let c = document.getElementById("myCanvas")
-    // tangle.render(c)
+    // let tangle = new Rectangle(100, 20, 600, 300, "#ffff56");
+    // let c = document.getElementById("myCanvas");
+    // tangle.render(c);
 
-
-    // hình tròn
-    // class Circle{
-    //     constructor(x,y,r) {
-    //         this.x=x;
-    //         this.y=y;
-    //         this.r=r;
-    //         this.start=0;
-    //         this.stop=2*Math.PI;
+    // class Circle {
+    //     constructor(x, y, r) {
+    //         this.x = x;
+    //         this.y = y;
+    //         this.r = r;
+    //         this.start = 0;
+    //         this.stop = 2 * Math.PI;
     //     }
-    //     render(canvas){
-    //         let ctx=canvas.getContext("2d")
+    //
+    //     render(canvas) {
+    //         let ctx = canvas.getContext("2d");
     //         ctx.beginPath();
-    //         ctx.arc(this.x,this.y,this.r,this.start,this.stop);
+    //         ctx.arc(this.x, this.y, this.r, this.start, this.stop);
     //         ctx.stroke();
     //     }
     // }
-    //     let circle= new Circle(95,50,45,0,2*Math.PI)
-    // let d=document.getElementById("myCanvas")
-    //         circle.render(d)
-
-
+    //
+    // let circle = new Circle(500, 400, 100, 0, 2 * Math.PI)
+    // let Crl = document.getElementById("myCanvas");
+    // circle.render(Crl);
     //đường thẳng
     class Line {
         constructor(x, y, x1, y1) {
@@ -81,7 +77,7 @@
         }
     }
 
-    let line = new Line(0, 0, 300, 150)
+    let line = new Line(0, 0, 200, 120)
     let c = document.getElementById("myCanvas")
     line.render(c)
 
